Fix entity section clipping

--- a/src/app/components/entity-section/entity-section-page/entity-section-page.component.scss
+++ b/src/app/components/entity-section/entity-section-page/entity-section-page.component.scss
@@ -6,7 +6,7 @@
 }
 
 .entity-grid {
-    margin-top: 18px;
+    margin: 18px 0;
     padding: 0 24px;
     width: 100%;
     display: grid;
