--- a/src/app/components/layouts/entity-page-scaffold/entity-page-scaffold.component.scss
+++ b/src/app/components/layouts/entity-page-scaffold/entity-page-scaffold.component.scss
@@ -8,7 +8,7 @@
     align-items: flex-start;
     overflow-y: auto;
 
-    background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url('/assets/bgs/bg2.jpg');
+    background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url('/assets/bgs/bg1.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
